--- a/annotations.ipynb
+++ b/annotations.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "created by @asha\n",
+    "created by @Adithya\n",
     "march 8th 2019\n",
     "'''"
    ]
